// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled PrimaryButton Should Render 1`] = `
<button
  className="primary__Button-sc-1lwi4g7-0 iUXqht"
  disabled={true}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;

exports[`Disabled PrimaryButton Should Render 2`] = `
<button
  className="secondary__Button-j7mjyk-0 hSUMXm"
  disabled={true}
  onClick={null}
  type="button"
>
  <span />
</button>
`;

exports[`Disabled WarnButton Should Render 1`] = `
<button
  className="warn__Button-sc-5cg2rp-0 gxotsG"
  disabled={true}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;

exports[`Full size PrimaryButton Should Render 1`] = `
<button
  className="primary__Button-sc-1lwi4g7-0 bHiHKa"
  disabled={false}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;

exports[`PrimaryButton Should Render 1`] = `
<button
  className="primary__Button-sc-1lwi4g7-0 iUXqht"
  disabled={false}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;

exports[`SecondaryButton Should Render 1`] = `
<button
  className="secondary__Button-j7mjyk-0 kgyVVR"
  disabled={false}
  onClick={null}
  type="button"
>
  <span />
</button>
`;

exports[`WarnButton Should Render 1`] = `
<button
  className="warn__Button-sc-5cg2rp-0 gxotsG"
  disabled={false}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;
